force-app/main/default/objects/PredictorObject__c/fields/economic_activities__c.field-meta.xml
<CustomField>
    <fullName>economic_activities__c</fullName>
    <label>Actividades Económicas AFIP</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>011</fullName>
                <color>#FFFFFF</color>
                <label>011</label>
            </value>
            <value>
                <fullName>012</fullName>
                <color>#FFFFFF</color>
                <label>012</label>
            </value>
            <value>
                <fullName>013</fullName>
                <color>#FFFFFF</color>
                <label>013</label>
            </value>
            <value>
                <fullName>014</fullName>
                <color>#FFFFFF</color>
                <label>014</label>
            </value>
            <value>
                <fullName>016</fullName>
                <color>#FFFFFF</color>
                <label>016</label>
            </value>
            <value>
                <fullName>017</fullName>
                <color>#FFFFFF</color>
                <label>017</label>
            </value>
            <value>
                <fullName>021</fullName>
                <color>#FFFFFF</color>
                <label>021</label>
            </value>
            <value>
                <fullName>022</fullName>
                <color>#FFFFFF</color>
                <label>022</label>
            </value>
            <value>
                <fullName>024</fullName>
                <color>#FFFFFF</color>
                <label>024</label>
            </value>
            <value>
                <fullName>031</fullName>
                <color>#FFFFFF</color>
                <label>031</label>
            </value>
            <value>
                <fullName>051</fullName>
                <color>#FFFFFF</color>
                <label>051</label>
            </value>
            <value>
                <fullName>052</fullName>
                <color>#FFFFFF</color>
                <label>052</label>
            </value>
            <value>
                <fullName>061</fullName>
                <color>#FFFFFF</color>
                <label>061</label>
            </value>
            <value>
                <fullName>062</fullName>
                <color>#FFFFFF</color>
                <label>062</label>
            </value>
            <value>
                <fullName>071</fullName>
                <color>#FFFFFF</color>
                <label>071</label>
            </value>
            <value>
                <fullName>072</fullName>
                <color>#FFFFFF</color>
                <label>072</label>
            </value>
            <value>
                <fullName>081</fullName>
                <color>#FFFFFF</color>
                <label>081</label>
            </value>
            <value>
                <fullName>089</fullName>
                <color>#FFFFFF</color>
                <label>089</label>
            </value>
            <value>
                <fullName>091</fullName>
                <color>#FFFFFF</color>
                <label>091</label>
            </value>
            <value>
                <fullName>099</fullName>
                <color>#FFFFFF</color>
                <label>099</label>
            </value>
            <value>
                <fullName>101</fullName>
                <color>#FFFFFF</color>
                <label>101</label>
            </value>
            <value>
                <fullName>102</fullName>
                <color>#FFFFFF</color>
                <label>102</label>
            </value>
            <value>
                <fullName>103</fullName>
                <color>#FFFFFF</color>
                <label>103</label>
            </value>
            <value>
                <fullName>104</fullName>
                <color>#FFFFFF</color>
                <label>104</label>
            </value>
            <value>
                <fullName>105</fullName>
                <color>#FFFFFF</color>
                <label>105</label>
            </value>
            <value>
                <fullName>106</fullName>
                <color>#FFFFFF</color>
                <label>106</label>
            </value>
            <value>
                <fullName>107</fullName>
                <color>#FFFFFF</color>
                <label>107</label>
            </value>
            <value>
                <fullName>108</fullName>
                <color>#FFFFFF</color>
                <label>108</label>
            </value>
            <value>
                <fullName>109</fullName>
                <color>#FFFFFF</color>
                <label>109</label>
            </value>
            <value>
                <fullName>110</fullName>
                <color>#FFFFFF</color>
                <label>110</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>