force-app/main/default/objects/PredictorObject__c/fields/Education_Level__c.field-meta.xml
<CustomField>
    <fullName>Education_Level__c</fullName>
    <label>Nivel de Educación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>