force-app/main/default/objects/PredictorObject__c/fields/election_rolls__c.field-meta.xml
<CustomField>
    <fullName>election_rolls__c</fullName>
    <label>Inscripto en padrones</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NACIONAL</fullName>
                <color>#FFFFFF</color>
                <label>NACIONAL</label>
            </value>
            <value>
                <fullName>CORDOBA</fullName>
                <color>#FFFFFF</color>
                <label>CORDOBA</label>
            </value>
            <value>
                <fullName>SANTA FE</fullName>
                <color>#FFFFFF</color>
                <label>SANTA FE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>