force-app/main/default/objects/PredictorObject__c/fields/Electoral_Booth__c.field-meta.xml
<CustomField>
    <fullName>Electoral_Booth__c</fullName>
    <label>Mesa Electoral</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>