force-app/main/default/objects/PredictorObject__c/fields/Electoral_Section_19__c.field-meta.xml
<CustomField>
    <fullName>Electoral_Section_19__c</fullName>
    <label>Electoral_Section_19</label>
    <length>255</length>
    <type>Text</type>
</CustomField>