force-app/main/default/objects/PredictorObject__c/fields/Employer_2__c.field-meta.xml
<CustomField>
    <fullName>Employer_2__c</fullName>
    <label>Empleadores #2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>