force-app/main/default/objects/PredictorObject__c/fields/Escuela_Electoral__c.field-meta.xml
<CustomField>
    <fullName>Escuela_Electoral__c</fullName>
    <label>Escuela Electoral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>