force-app/main/default/objects/PredictorObject__c/fields/Frente_Ciudadano_Social__c.field-meta.xml
<CustomField>
    <fullName>Frente_Ciudadano_Social__c</fullName>
    <label>Frente_Ciudadano_Social</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>