force-app/main/default/objects/PredictorObject__c/fields/Frente_Tierra_de_Union__c.field-meta.xml
<CustomField>
    <fullName>Frente_Tierra_de_Union__c</fullName>
    <label>Frente_Tierra_de_Union</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>