force-app/main/default/objects/PredictorObject__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Sexo</label>
    <length>2</length>
    <type>Text</type>
</CustomField>