force-app/main/default/objects/PredictorObject__c/fields/geo_location__c.field-meta.xml
<CustomField>
    <fullName>geo_location__c</fullName>
    <label>Coordenadas</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>