force-app/main/default/objects/PredictorObject__c/fields/GraduadosUBACsEconomicas__c.field-meta.xml
<CustomField>
    <fullName>GraduadosUBACsEconomicas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GraduadosUBACsEconomicas</label>
    <type>Checkbox</type>
</CustomField>