force-app/main/default/objects/PredictorObject__c/fields/Hogar__c.field-meta.xml
<CustomField>
    <fullName>Hogar__c</fullName>
    <label>Hogar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>