force-app/main/default/objects/PredictorObject__c/fields/HUR_Encuesta__c.field-meta.xml
<CustomField>
    <fullName>HUR_Encuesta__c</fullName>
    <label>HUR Encuesta</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2019 Enero</fullName>
                <color>#FFFFFF</color>
                <label>2019 Enero</label>
            </value>
            <value>
                <fullName>2019 Febrero</fullName>
                <color>#FFFFFF</color>
                <label>2019 Febrero</label>
            </value>
            <value>
                <fullName>EncuestadoIVRabr-19</fullName>
                <color>#FFFFFF</color>
                <label>EncuestadoIVRabr-19</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>