force-app/main/default/objects/PredictorObject__c/fields/HUR_Encuesta_Resultado__c.field-meta.xml
<CustomField>
    <fullName>HUR_Encuesta_Resultado__c</fullName>
    <label>HUR Encuesta Resultado</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VOTO 2</fullName>
                <color>#FFFFFF</color>
                <label>VOTO 2</label>
            </value>
            <value>
                <fullName>VOTO 3</fullName>
                <color>#FFFFFF</color>
                <label>VOTO 3</label>
            </value>
            <value>
                <fullName>VOTO 4</fullName>
                <color>#FFFFFF</color>
                <label>VOTO 4</label>
            </value>
            <value>
                <fullName>Juan Horacio Zabaleta</fullName>
                <color>#FFFFFF</color>
                <label>Juan Horacio Zabaleta</label>
            </value>
            <value>
                <fullName>Lucas Delfino</fullName>
                <color>#FFFFFF</color>
                <label>Lucas Delfino</label>
            </value>
            <value>
                <fullName>Luis Acuña</fullName>
                <color>#FFFFFF</color>
                <label>Luis Acuña</label>
            </value>
            <value>
                <fullName>No sabe</fullName>
                <color>#FFFFFF</color>
                <label>No sabe</label>
            </value>
            <value>
                <fullName>Otro</fullName>
                <color>#FFFFFF</color>
                <label>Otro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>