force-app/main/default/objects/PredictorObject__c/fields/Income_Non_Remunerative__c.field-meta.xml
<CustomField>
    <fullName>Income_Non_Remunerative__c</fullName>
    <label>Ingreso Extra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>