force-app/main/default/objects/PredictorObject__c/fields/Income_Type__c.field-meta.xml
<CustomField>
    <fullName>Income_Type__c</fullName>
    <label>Tipo de Ingreso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>