force-app/main/default/objects/PredictorObject__c/fields/Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Ingreso__c</fullName>
    <label>Ingreso</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Muy Alto</fullName>
                <color>#FFFFFF</color>
                <label>Muy Alto</label>
            </value>
            <value>
                <fullName>Alto</fullName>
                <color>#FFFFFF</color>
                <label>Alto</label>
            </value>
            <value>
                <fullName>Medio</fullName>
                <color>#FFFFFF</color>
                <label>Medio</label>
            </value>
            <value>
                <fullName>Bajo</fullName>
                <color>#FFFFFF</color>
                <label>Bajo</label>
            </value>
            <value>
                <fullName>Muy Bajo</fullName>
                <color>#FFFFFF</color>
                <label>Muy Bajo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>