force-app/main/default/objects/PredictorObject__c/fields/Instagram_Link__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Link__c</fullName>
    <label>Instagram Link</label>
    <type>Url</type>
</CustomField>