force-app/main/default/objects/PredictorObject__c/fields/jaksjlakJSL__c.field-meta.xml
<CustomField>
    <fullName>jaksjlakJSL__c</fullName>
    <label>jaksjlakJSL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>