force-app/main/default/objects/PredictorObject__c/fields/jerarquia_empleo__c.field-meta.xml
<CustomField>
    <fullName>jerarquia_empleo__c</fullName>
    <label>Jerarquía Empleo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Directores y gerentes</fullName>
                <color>#FFFFFF</color>
                <label>Directores y gerentes</label>
            </value>
            <value>
                <fullName>Profesionales cientificos e intelectuales</fullName>
                <color>#FFFFFF</color>
                <label>Profesionales cientificos e intelectuales</label>
            </value>
            <value>
                <fullName>Tecnicos y profesionales de nivel medio</fullName>
                <color>#FFFFFF</color>
                <label>Tecnicos y profesionales de nivel medio</label>
            </value>
            <value>
                <fullName>Personal de apoyo administrativo</fullName>
                <color>#FFFFFF</color>
                <label>Personal de apoyo administrativo</label>
            </value>
            <value>
                <fullName>Trabajadores de servicio y vendedores</fullName>
                <color>#FFFFFF</color>
                <label>Trabajadores de servicio y vendedores</label>
            </value>
            <value>
                <fullName>Trabajadores agropecuarios</fullName>
                <color>#FFFFFF</color>
                <label>Trabajadores agropecuarios</label>
            </value>
            <value>
                <fullName>Operadores y otros oficios</fullName>
                <color>#FFFFFF</color>
                <label>Operadores y otros oficios</label>
            </value>
            <value>
                <fullName>Ocupaciones militares</fullName>
                <color>#FFFFFF</color>
                <label>Ocupaciones militares</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>