force-app/main/default/objects/PredictorObject__c/fields/Jerarquia_f_x__c.field-meta.xml
<CustomField>
    <fullName>Jerarquia_f_x__c</fullName>
    <label>Jerarquia_f_x</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>