force-app/main/default/objects/PredictorObject__c/fields/MailingAppartment__c.field-meta.xml
<CustomField>
    <fullName>MailingAppartment__c</fullName>
    <description>Este es el que va 13/6</description>
    <label>MailingAppartment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>