force-app/main/default/objects/PredictorObject__c/fields/MailingFloor__c.field-meta.xml
<CustomField>
    <fullName>MailingFloor__c</fullName>
    <label>MailingFloor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>