force-app/main/default/objects/PredictorObject__c/fields/Mobile_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Country_Code__c</fullName>
    <label>Mobile Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
                <color>#FFFFFF</color>
                <label>US</label>
            </value>
            <value>
                <fullName>AC</fullName>
                <color>#FFFFFF</color>
                <label>AC</label>
            </value>
            <value>
                <fullName>AD</fullName>
                <color>#FFFFFF</color>
                <label>AD</label>
            </value>
            <value>
                <fullName>AE</fullName>
                <color>#FFFFFF</color>
                <label>AE</label>
            </value>
            <value>
                <fullName>AF</fullName>
                <color>#FFFFFF</color>
                <label>AF</label>
            </value>
            <value>
                <fullName>AG</fullName>
                <color>#FFFFFF</color>
                <label>AG</label>
            </value>
            <value>
                <fullName>AI</fullName>
                <color>#FFFFFF</color>
                <label>AI</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <color>#FFFFFF</color>
                <label>AL</label>
            </value>
            <value>
                <fullName>AM</fullName>
                <color>#FFFFFF</color>
                <label>AM</label>
            </value>
            <value>
                <fullName>AO</fullName>
                <color>#FFFFFF</color>
                <label>AO</label>
            </value>
            <value>
                <fullName>AQ</fullName>
                <color>#FFFFFF</color>
                <label>AQ</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <color>#FFFFFF</color>
                <label>AR</label>
            </value>
            <value>
                <fullName>AS</fullName>
                <color>#FFFFFF</color>
                <label>AS</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <color>#FFFFFF</color>
                <label>AT</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <color>#FFFFFF</color>
                <label>AU</label>
            </value>
            <value>
                <fullName>AW</fullName>
                <color>#FFFFFF</color>
                <label>AW</label>
            </value>
            <value>
                <fullName>AX</fullName>
                <color>#FFFFFF</color>
                <label>AX</label>
            </value>
            <value>
                <fullName>AZ</fullName>
                <color>#FFFFFF</color>
                <label>AZ</label>
            </value>
            <value>
                <fullName>BA</fullName>
                <color>#FFFFFF</color>
                <label>BA</label>
            </value>
            <value>
                <fullName>BB</fullName>
                <color>#FFFFFF</color>
                <label>BB</label>
            </value>
            <value>
                <fullName>BD</fullName>
                <color>#FFFFFF</color>
                <label>BD</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <color>#FFFFFF</color>
                <label>BE</label>
            </value>
            <value>
                <fullName>BF</fullName>
                <color>#FFFFFF</color>
                <label>BF</label>
            </value>
            <value>
                <fullName>BG</fullName>
                <color>#FFFFFF</color>
                <label>BG</label>
            </value>
            <value>
                <fullName>BH</fullName>
                <color>#FFFFFF</color>
                <label>BH</label>
            </value>
            <value>
                <fullName>BI</fullName>
                <color>#FFFFFF</color>
                <label>BI</label>
            </value>
            <value>
                <fullName>BJ</fullName>
                <color>#FFFFFF</color>
                <label>BJ</label>
            </value>
            <value>
                <fullName>BL</fullName>
                <color>#FFFFFF</color>
                <label>BL</label>
            </value>
            <value>
                <fullName>BM</fullName>
                <color>#FFFFFF</color>
                <label>BM</label>
            </value>
            <value>
                <fullName>BN</fullName>
                <color>#FFFFFF</color>
                <label>BN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>