force-app/main/default/objects/PredictorObject__c/fields/motorcycles_owned__c.field-meta.xml
<CustomField>
    <fullName>motorcycles_owned__c</fullName>
    <label>Cantidad de motocicletas</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>