force-app/main/default/objects/PredictorObject__c/fields/Movilidad__c.field-meta.xml
<CustomField>
    <fullName>Movilidad__c</fullName>
    <description>Tipos de transporte que el Ciudadano utiliza</description>
    <inlineHelpText>Tipos de transporte que el Ciudadano utiliza</inlineHelpText>
    <label>Movilidad</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
                <color>#FFFFFF</color>
                <label>Auto</label>
            </value>
            <value>
                <fullName>Moto</fullName>
                <color>#FFFFFF</color>
                <label>Moto</label>
            </value>
            <value>
                <fullName>Transporte Público</fullName>
                <color>#FFFFFF</color>
                <label>Transporte Público</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>