force-app/main/default/objects/PredictorObject__c/fields/No_Borrar__c.field-meta.xml
<CustomField>
    <fullName>No_Borrar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Borrar</label>
    <type>Checkbox</type>
</CustomField>