force-app/main/default/objects/PredictorObject__c/fields/Obra_Social__c.field-meta.xml
<CustomField>
    <fullName>Obra_Social__c</fullName>
    <label>Obra_Social</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>