force-app/main/default/objects/PredictorObject__c/fields/Participacion_Encuesta__c.field-meta.xml
<CustomField>
    <fullName>Participacion_Encuesta__c</fullName>
    <label>Participacion Encuesta</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digital/ abr-19/ Lucas Delfino</fullName>
                <color>#FFFFFF</color>
                <label>Digital/ abr-19/ Lucas Delfino</label>
            </value>
            <value>
                <fullName>Digital/ abr-19/ Otro</fullName>
                <color>#FFFFFF</color>
                <label>Digital/ abr-19/ Otro</label>
            </value>
            <value>
                <fullName>Digital/ abr-19/ No sabe</fullName>
                <color>#FFFFFF</color>
                <label>Digital/ abr-19/ No sabe</label>
            </value>
            <value>
                <fullName>Digital/ abr-19/ Luis Acuña</fullName>
                <color>#FFFFFF</color>
                <label>Digital/ abr-19/ Luis Acuña</label>
            </value>
            <value>
                <fullName>Digital/ abr-19/ Juan Horacio Zabaleta</fullName>
                <color>#FFFFFF</color>
                <label>Digital/ abr-19/ Juan Horacio Zabaleta</label>
            </value>
            <value>
                <fullName>IVR/ abr-19/ Juan Horacio Zabaleta</fullName>
                <color>#FFFFFF</color>
                <label>IVR/ abr-19/ Juan Horacio Zabaleta</label>
            </value>
            <value>
                <fullName>IVR/ abr-19/ No sabe</fullName>
                <color>#FFFFFF</color>
                <label>IVR/ abr-19/ No sabe</label>
            </value>
            <value>
                <fullName>IVR/ abr-19/ Lucas Delfino</fullName>
                <color>#FFFFFF</color>
                <label>IVR/ abr-19/ Lucas Delfino</label>
            </value>
            <value>
                <fullName>IVR/ abr-19/ Otro</fullName>
                <color>#FFFFFF</color>
                <label>IVR/ abr-19/ Otro</label>
            </value>
            <value>
                <fullName>IVR/ abr-19/ Luis Acuña</fullName>
                <color>#FFFFFF</color>
                <label>IVR/ abr-19/ Luis Acuña</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>