force-app/main/default/objects/PredictorObject__c/fields/party_affiliation__c.field-meta.xml
<CustomField>
    <fullName>party_affiliation__c</fullName>
    <label>Afiliación Partidaria</label>
    <type>TextArea</type>
</CustomField>