force-app/main/default/objects/PredictorObject__c/fields/PhotoUrl_legacy__c.field-meta.xml
<CustomField>
    <fullName>PhotoUrl_legacy__c</fullName>
    <label>Photo URL</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>