force-app/main/default/objects/PredictorObject__c/fields/Porconnbi__c.field-meta.xml
<CustomField>
    <fullName>Porconnbi__c</fullName>
    <label>Porconnbi</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>