force-app/main/default/objects/PredictorObject__c/fields/Predicted_Values_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Values_Boolean__c</fullName>
    <label>Predicted_Values_Boolean</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>