force-app/main/default/objects/PredictorObject__c/fields/prj_filter_GraduadosCsEconomicas__c.field-meta.xml
<CustomField>
    <fullName>prj_filter_GraduadosCsEconomicas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filtro Graduados Cs. Económicas</label>
    <type>Checkbox</type>
</CustomField>