force-app/main/default/objects/PredictorObject__c/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>Profesión</label>
    <length>255</length>
    <type>Text</type>
</CustomField>