force-app/main/default/objects/PredictorObject__c/fields/RandomFilter2__c.field-meta.xml
<CustomField>
    <fullName>RandomFilter2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RandomFilter2</label>
    <type>Checkbox</type>
</CustomField>