force-app/main/default/objects/PredictorObject__c/fields/RandomFilter__c.field-meta.xml
<CustomField>
    <fullName>RandomFilter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RandomFilter</label>
    <type>Checkbox</type>
</CustomField>