force-app/main/default/objects/PredictorObject__c/fields/RandomFilterText__c.field-meta.xml
<CustomField>
    <fullName>RandomFilterText__c</fullName>
    <label>RandomFilterText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>