force-app/main/default/objects/PredictorObject__c/fields/Sueldo_3__c.field-meta.xml
<CustomField>
    <fullName>Sueldo_3__c</fullName>
    <label>Sueldo #3</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>