force-app/main/default/objects/PredictorObject__c/fields/Target_Bertone_f_x__c.field-meta.xml
<CustomField>
    <fullName>Target_Bertone_f_x__c</fullName>
    <label>Target_Bertone_f_x</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>