force-app/main/default/objects/PredictorObject__c/fields/Target_Melella_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Target_Melella_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Target_Melella_Boolean</label>
    <type>Checkbox</type>
</CustomField>