force-app/main/default/objects/PredictorObject__c/fields/Telegram__c.field-meta.xml
<CustomField>
    <fullName>Telegram__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telegram</label>
    <type>Checkbox</type>
</CustomField>